--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
   "preserveConstEnums": true,
   "outDir": "./src/static/js",
   "module": "ES6",
-  "sourceMap": true
+  "sourceMap": false
 },
   "include": ["./src/static/ts/**/*"]
 }
