--- a/package.json
+++ b/package.json
@@ -5,19 +5,21 @@
   "main": "./src/server.js",
   "scripts": {
     "dev": "tsc --watch & nodemon ./src/server.js",
+    "lint": "prettier --write .",
     "build": "tsc",
     "start": "node ./src/server.js",
     "tsc": "tsc",
     "run": "node ./src/server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Sion Ramos de los santos",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7",
+    "prettier": "2.8.4",
     "typescript": "^4.8.4"
   }
 }
